added img links to image folders

--- a/index.html
+++ b/index.html
@@ -19,6 +19,38 @@
       </nav>
     </header>
     <section>
+      <ul>
+        <li>
+          <a href="img/numbers-01.jpg">
+            <img src="img/numbers-01.jpg" alt="image">
+            <p>Experimentation with color and texture.</p>
+          </a>
+        </li>
+        <li>
+          <a href="img/numbers-02.jpg">
+            <img src="img/numbers-02.jpg" alt="image">
+            <p>Playing with blending modes in Photoshop.</p>
+          </a>
+        </li>
+        <li>
+          <a href="img/numbers-06.jpg">
+            <img src="img/numbers-06.jpg" alt="image">
+            <p>Trying to play with 80 style of glows.</p>
+          </a>
+        </li>
+        <li>
+          <a href="img/numbers-09.jpg">
+            <img src="img/numbers-09.jpg" alt="image">
+            <p>Drips created by photophop brushes.</p>
+          </a>
+        </li>
+        <li>
+          <a href="img/numbers-12.jpg">
+            <img src="img/numbers-12.jpg" alt="image">
+            <p>Creating shapes using repetition.</p>
+          </a>
+        </li>
+      </ul>
       <p>Gallery will go here</p>
 
     </section>
