add js an links to twitter and facebook

--- a/index.html
+++ b/index.html
@@ -55,6 +55,13 @@
 
     </section>
     <footer>
+      <!-- make a link and use javascript -->
+      <a href="#">
+        <img src="img/twitter-wrap.png" alt="Twitter logo">
+      </a>
+      <a href="#">
+        <img src="img/facebook-wrap.png" alt="Facebook logo">
+      </a>
       <p>&copy; 2016 J. Connolly.</p>
     </footer>
 
