--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>J. Connolly | Developer & Designer</title>
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
+
   </head>
   <body>
     <header>
@@ -18,52 +21,54 @@
         </ul>
       </nav>
     </header>
-    <section>
-      <ul>
-        <li>
-          <a href="img/numbers-01.jpg">
-            <img src="img/numbers-01.jpg" alt="image">
-            <p>Experimentation with color and texture.</p>
-          </a>
-        </li>
-        <li>
-          <a href="img/numbers-02.jpg">
-            <img src="img/numbers-02.jpg" alt="image">
-            <p>Playing with blending modes in Photoshop.</p>
-          </a>
-        </li>
-        <li>
-          <a href="img/numbers-06.jpg">
-            <img src="img/numbers-06.jpg" alt="image">
-            <p>Trying to play with 80 style of glows.</p>
-          </a>
-        </li>
-        <li>
-          <a href="img/numbers-09.jpg">
-            <img src="img/numbers-09.jpg" alt="image">
-            <p>Drips created by photophop brushes.</p>
-          </a>
-        </li>
-        <li>
-          <a href="img/numbers-12.jpg">
-            <img src="img/numbers-12.jpg" alt="image">
-            <p>Creating shapes using repetition.</p>
-          </a>
-        </li>
-      </ul>
-      <p>Gallery will go here</p>
+    <div class="wrapper">
+      <section>
+        <ul>
+          <li>
+            <a href="img/numbers-01.jpg">
+              <img src="img/numbers-01.jpg" alt="image">
+              <p>Experimentation with color and texture.</p>
+            </a>
+          </li>
+          <li>
+            <a href="img/numbers-02.jpg">
+              <img src="img/numbers-02.jpg" alt="image">
+              <p>Playing with blending modes in Photoshop.</p>
+            </a>
+          </li>
+          <li>
+            <a href="img/numbers-06.jpg">
+              <img src="img/numbers-06.jpg" alt="image">
+              <p>Trying to play with 80 style of glows.</p>
+            </a>
+          </li>
+          <li>
+            <a href="img/numbers-09.jpg">
+              <img src="img/numbers-09.jpg" alt="image">
+              <p>Drips created by photophop brushes.</p>
+            </a>
+          </li>
+          <li>
+            <a href="img/numbers-12.jpg">
+              <img src="img/numbers-12.jpg" alt="image">
+              <p>Creating shapes using repetition.</p>
+            </a>
+          </li>
+        </ul>
+        <p>Gallery will go here</p>
 
-    </section>
-    <footer>
-      <!-- make a link and use javascript -->
-      <a href="#">
-        <img src="img/twitter-wrap.png" alt="Twitter logo">
-      </a>
-      <a href="#">
-        <img src="img/facebook-wrap.png" alt="Facebook logo">
-      </a>
-      <p>&copy; 2016 J. Connolly.</p>
-    </footer>
+      </section>
+      <footer>
+        <!-- make a link and use javascript -->
+        <a href="#" id="twitterL">
+          <img src="img/twitter-wrap.png" alt="Twitter logo">
+        </a>
+        <a href="#" id="faceL">
+          <img src="img/facebook-wrap.png" alt="Facebook logo">
+        </a>
+        <p>&copy; 2016 J. Connolly.</p>
+      </footer>
+    </div>
 
 
 
@@ -90,4 +95,5 @@
 
 
   </body>
+  <script type="text/javascript" src="js/js.js"></script>
 </html>
