adding font styles to style.css

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      <a href="index.html">
+      <a href="index.html" id="logo">
         <h1>J. Connolly</h1>
         <h2>Designer & Developer</h2>
       </a>
