--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>J. Connolly | Developer & Designer</title>
     <link rel="stylesheet" href="css/normalize.css">
-    <link href="https://fonts.googleapis.com/css?family=Changa+One|Open+Sans" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Changa+One|Open+Sans" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 
 
@@ -25,7 +25,7 @@
     </header>
     <div class="wrapper">
       <section>
-        <ul>
+        <ul id="gallery">
           <li>
             <a href="img/numbers-01.jpg">
               <img src="img/numbers-01.jpg" alt="image">
@@ -57,7 +57,6 @@
             </a>
           </li>
         </ul>
-        <p>Gallery will go here</p>
 
       </section>
       <footer>
