made changes and style for mobile nav

--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
       <footer>
         <!-- make a link and use javascript -->
         <a href="#" id="twitterL">
-          <img src="img/twitter-wrap.png" alt="Twitter logo">
+          <img src="img/twitter-wrap.png" alt="Twitter logo" class="social_icon">
         </a>
         <a href="#" id="faceL">
-          <img src="img/facebook-wrap.png" alt="Facebook logo">
+          <img src="img/facebook-wrap.png" alt="Facebook logo" class="social_icon">
         </a>
         <p>&copy; 2016 J. Connolly.</p>
       </footer>
