--- a/contact.html
+++ b/contact.html
@@ -32,9 +32,9 @@
       <section>
         <h3>Contact Details</h3>
         <ul class="contact-info">
-          <!-- <li class="phone"><a href="tel:555-6425">555-6425</a></li> -->
+          <li class="phone"><a href="tel:555-6425">555-1111 (example only)</a></li>
           <li class="mail"><a href="mailto:jtsurfrat@hotmail.com">jtsurfrat@hotmail.com</a></li>
-          <li class="linkin">Linkin: <a href="https://www.linkedin.com/in/jenna-connolly-019838b9/">J.Connolly</a></li>
+          <li class="linkin"><a href="https://www.linkedin.com/in/jenna-connolly-019838b9/">J.Connolly</a></li>
         </ul>
       </section>
       <footer>
