--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link href="https://fonts.googleapis.com/css?family=Changa+One|Open+Sans" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/responsive.css">
 
 
   </head>
@@ -24,12 +25,12 @@
       </nav>
     </header>
     <div class="wrapper">
-      <section>
+      <section id="primary">
         <h3>General Information</h3>
         <p>I am currently looking for developer and design work.</p>
         <p>Please use the phone for urgent inquires. Otherwise, Linkin and email are the best ways to reach me.</p>
       </section>
-      <section>
+      <section id="secondary">
         <h3>Contact Details</h3>
         <ul class="contact-info">
           <li class="phone"><a href="tel:555-6425">555-1111 (example only)</a></li>
