--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>J. Connolly | Developer & Designer</title>
     <link rel="stylesheet" href="css/normalize.css">
-    <link href="https://fonts.googleapis.com/css?family=Changa+One|Open+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Changa+One|Open+Sans" rel="stylesheet"/>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,7 +17,7 @@
       </a>
       <nav>
         <ul>
-          <li><a href="index.html"class="selected">Portfolio</a></li>
+          <li><a href="index.html" class="selected">Portfolio</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
@@ -57,7 +57,6 @@
             </a>
           </li>
         </ul>
-
       </section>
       <footer>
         <!-- make a link and use javascript -->
@@ -71,30 +70,7 @@
       </footer>
     </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
   </body>
-  <script type="text/javascript" src="js/js.js"></script>
+  <script type="text/javascript" src="js/js.js">
+  </script>
 </html>
