--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,8 @@
       <section id="secondary">
         <h3>Contact Details</h3>
         <ul class="contact-info">
-          <li class="phone"><a href="tel:555-6425">555-1111 (example only)</a></li>
+          <!-- telphone <a href="tel:555-6425">Not Available</a> -->
+          <li class="phone"><a href="#">Not Available</a></li>
           <li class="mail"><a href="mailto:jtsurfrat@hotmail.com">jtsurfrat@hotmail.com</a></li>
           <li class="linkin"><a href="https://www.linkedin.com/in/jenna-connolly-019838b9/">J.Connolly</a></li>
         </ul>
