--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <section>
         <ul id="gallery">
           <li>
-            <a href="img/numbers-01.jpg">
+            <a href="pages/laketahoe.html">
               <img src="img/numbers-01.jpg" alt="image">
               <p>Experimentation with color and texture.</p>
             </a>
@@ -71,6 +71,5 @@
     </div>
 
   </body>
-  <script type="text/javascript" src="js/js.js">
-  </script>
+  <script type="text/javascript" src="js/js.js"></script>
 </html>
