new section called city

--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
         <ul id="gallery">
           <li>
             <a href="pages/laketahoe.html">
-              <img src="img/numbers-01.jpg" alt="image">
-              <p>Experimentation with color and texture.</p>
+              <img src="img/numbers-011.jpg" alt="image">
+              <p>Lake Tahoe Website example.</p>
             </a>
           </li>
           <li>
-            <a href="img/numbers-02.jpg">
+            <a href="pages/city.html">
               <img src="img/numbers-02.jpg" alt="image">
               <p>Playing with blending modes in Photoshop.</p>
             </a>
