--- a/pages/laketahoe.html
+++ b/pages/laketahoe.html
@@ -4,6 +4,7 @@
     <title>Lake Tahoe</title>
     <link rel="stylesheet" href="../css/normalize.css">
     <link rel="stylesheet" href="../css/tahoestyle.css">
+    <meta name="viewport" content="width=device-width">
   </head>
   <body>
     <header id="top" class="main-header">
@@ -16,7 +17,8 @@
 			<p class="intro">
 				Lake Tahoe is one of the most breathtaking attractions located in California. It's home to a number of ski resorts, summer outdoor recreation, and tourist attractions. Snow and skiing are a significant part of the area's reputation.
 			</p>
-			<a class="callout" href="#more">Find out more</a>
+			<a class="callout" href="../index.html">Back to home</a>
+      <!-- <a href="../index.html">Back to home &raquo;</a> -->
 
       <div class="wildlife">
         <h2>Check out all the Wildlife</h2>
@@ -59,7 +61,7 @@
 
 		<footer class="main-footer">
 			<p>All rights reserved to the state of <a href="#">California</a>.</p>
-			<a href="#top">Back to top &raquo;</a>
+			<a href="../index.html">Back to home &raquo;</a>
 		</footer>
   </body>
 </html>
